// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-popover Should close mg-popover when click on element with "popovertargetaction" attribute 1`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <div slot="content">
      <mg-button popovertargetaction="hide" role="button" tabindex="0">
        <template shadowrootmode="open">
          <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
            <div class="mg-c-button__content">
              <slot></slot>
            </div>
          </div>
        </template>
      </mg-button>
    </div>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should close mg-popover when click on element with "popovertargetaction" attribute 2`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" data-show id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <div slot="content">
      <mg-button popovertargetaction="hide" role="button" tabindex="0">
        <template shadowrootmode="open">
          <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
            <div class="mg-c-button__content">
              <slot></slot>
            </div>
          </div>
        </template>
      </mg-button>
    </div>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should close mg-popover when click on element with "popovertargetaction" attribute 3`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <div slot="content">
      <mg-button popovertargetaction="hide" role="button" tabindex="0">
        <template shadowrootmode="open">
          <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
            <div class="mg-c-button__content">
              <slot></slot>
            </div>
          </div>
        </template>
      </mg-button>
    </div>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 1`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 2`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="auto" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(0px, NaNpx);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: NaNpx; undefined: 1px;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 3`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" data-show id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 4`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <mg-button aria-label="Close" is-icon="" role="button" tabindex="0">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          <mg-icon icon="cross"></mg-icon>
        </mg-button>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 5`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" data-show id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 6`] = `
<mg-popover lang="fr">
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <mg-button aria-label="Fermer" is-icon="" role="button" tabindex="0">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          <mg-icon icon="cross"></mg-icon>
        </mg-button>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 7`] = `
<mg-popover lang="xx">
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <mg-button aria-label="Close" is-icon="" role="button" tabindex="0">
          <template shadowrootmode="open">
            <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
              <div class="mg-c-button__content">
                <slot></slot>
              </div>
            </div>
          </template>
          <mg-icon icon="cross"></mg-icon>
        </mg-button>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 8`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-arrow-hide data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should render with element 9`] = `
<mg-popover data-fallback-placement="left">
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should update Floating UI instance when slot updates 1`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div slot="arrow"></div>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" data-show id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should update Floating UI instance when slot updates 2`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <div slot="arrow"></div>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" data-show id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should update mg-popover-content id when identifier is updated 1`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;

exports[`mg-popover Should update mg-popover-content id when identifier is updated 2`] = `
<mg-popover>
  <template shadowrootmode="open">
    <slot></slot>
    <slot name="content"></slot>
  </template>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <template shadowrootmode="open">
      <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
        <div class="mg-c-button__content">
          <slot></slot>
        </div>
      </div>
    </template>
    mg-button
  </mg-button>
  <mg-popover-content data-placement="bottom" id="new-identifier" slot="content" style="position: fixed; top: 0; left: 0; transform: translate(NaNpx, 0px);">
    <template shadowrootmode="open">
      <mg-card class="mg-c-popover-content">
        <template shadowrootmode="open">
          <div class="mg-c-card">
            <slot></slot>
          </div>
        </template>
        <div class="mg-c-popover-content__title">
          <slot name="title"></slot>
        </div>
        <slot name="content"></slot>
      </mg-card>
      <slot name="arrow"></slot>
    </template>
    <div data-floating-arrow slot="arrow" style="position: absolute; top: 1px; left: NaNpx;"></div>
    <h2 slot="title">
      Blu bli blo bla
    </h2>
    <p slot="content">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </mg-popover-content>
</mg-popover>
`;
